Thu Feb 21 01:50:17 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Update with new tarballs.

Thu Feb 21 01:23:46 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update the branchpoint version
	  numbers.

Tue Feb 05 09:59:50 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Upgrade version of xapian used to one which
	  contains database replication functionality.

Tue Feb 05 09:45:27 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py,xappy/searchconnection.py,
	  xappy/searchconnection_doctest3.txt: Add interface to
	  IndexerConnection for setting and getting metadata, and interface
	  to SearchConnection for getting metadata.

Mon Feb 04 00:58:05 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Cope with a facet being declared as
	  SORTABLE, but without a type, but of facet type float. (Treat the
	  facet search as a numeric range, correctly - used to fail to
	  serialise the numbers correctly.)
	* xappy/searchconnection_doctest2.txt: Add regression test.

Sat Feb 02 17:59:24 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py: Add simple work-around for synonyms -
	  allow a field to be specified for the original word separately
	  from the synonym.  Needs tidying up, but allows slightly more
	  flexibility in synonyms.
	* xappy/searchconnection_doctest2.txt: Adjust test accordingly.

Sat Feb 02 13:14:29 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py,xappy/searchconnection.py: Backwards
	  compatibility fix for reading the metadata: if the config isn't
	  in the metadata key, or metadata isn't supported by the version
	  of xapian in use, read it from the file.  When writing the
	  config, if it can't be stored in the metadata, store it in a
	  file.  A database can now be upgraded to use the new metadata