@@ -1,3 +1,8 @@
+Thu Feb 21 01:54:18 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* libs/get_xapian.py: Revert to earlier tarballs - the new ones
+	  don't work.
+
 Thu Feb 21 01:50:17 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* libs/get_xapian.py: Update with new tarballs.
